overflow fixed

--- a/src/assets/scss/scoreboard/tarocco-scoreboard.css
+++ b/src/assets/scss/scoreboard/tarocco-scoreboard.css
@@ -1,6 +1,6 @@
 .game-scoreboard {
     display: block;
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
     height: 70vh;
     background-color: #ffffff;
